--- a/about.html
+++ b/about.html
@@ -89,13 +89,14 @@
                   <ul class="nav navbar-nav">
 
                     <li><a  href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a class="is-active" href="about.html">ABOUT</a></li>
                     <li class="has-child"><a href="#">MEDIA</a>
                       <ul class="submenu">
                         <li class="submenu-item"><a href="events.html">EVENTS</a></li>
                         <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                       </ul>
                     </li>
+                    <li><a href="project.html">PROJECTS</a></li>
                     <li><a href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
