--- a/contact.html
+++ b/contact.html
@@ -96,8 +96,9 @@
                         <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                       </ul>
                     </li>
+                    <li><a href="project.html">PROJECTS</a></li>
                     <li><a href="volunteer.html">VOLUNTEER</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a class="is-active" href="contact.html">CONTACT US</a></li>
                     </ul>
                     <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
                 </div> <!-- /#navbar -->
