--- a/events.html
+++ b/events.html
@@ -95,12 +95,13 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li class="has-child"><a href="#">MEDIA</a>
+                    <li class="has-child"><a class="is-active" href="#">MEDIA</a>
                         <ul class="submenu">
                           <li class="submenu-item"><a href="events.html">EVENTS</a></li>
                           <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                         </ul>
                     </li>
+                    <li><a href="project.html">PROJECTS</a></li>
                     <li><a href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
@@ -115,8 +116,6 @@
         </nav>
 
     </header>
-
-
 	<div class="page-heading text-center">
 
 		<div class="container zoomIn animated">
@@ -128,410 +127,34 @@
 
 		</div>
 
-	</div>
-    <div class="section-home home-reasons">
-
-        <div class="container">
-
-            <div class="row">
-
-                <div class="col-md-6">
-
-                    <div class="reasons-col animate-onscroll fadeIn">
-
-                        <img src="assets/images/reasons/we-fight-togother.jpg" alt="">
-
-                        <div class="reasons-titles">
-
-                            <h3 class="reasons-title">We fight together</h3>
-                            <h5 class="reason-subtitle">We are humans</h5>
-
-                        </div>
-
-                        <div class="on-hover hidden-xs">
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                        </div>
-                    </div>
-
-                </div>
-
-
-                <div class="col-md-6">
-
-                    <div class="reasons-col animate-onscroll fadeIn">
-
-                        <img src="assets/images/reasons/we-care-about.jpg" alt="">
-
-                        <div class="reasons-titles">
-
-                            <h3 class="reasons-title">WE care about others</h3>
-                            <h5 class="reason-subtitle">We are humans</h5>
-
-                        </div>
-
-                        <div class="on-hover hidden-xs">
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                        </div>
-
-
-                    </div>
-
-                </div>
-
-
-            </div>
-
-
-
-        </div>
-
-
-    </div> <!-- /.home-reasons -->
-    <div class="section-home home-reasons">
-
-        <div class="container">
-
-            <div class="row">
-
-                <div class="col-md-6">
-
-                    <div class="reasons-col animate-onscroll fadeIn">
-
-                        <img src="assets/images/reasons/we-fight-togother.jpg" alt="">
-
-                        <div class="reasons-titles">
-
-                            <h3 class="reasons-title">We fight together</h3>
-                            <h5 class="reason-subtitle">We are humans</h5>
-
-                        </div>
-
-                        <div class="on-hover hidden-xs">
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                        </div>
-                    </div>
-
-                </div>
-
-
-                <div class="col-md-6">
-
-                    <div class="reasons-col animate-onscroll fadeIn">
-
-                        <img src="assets/images/reasons/we-care-about.jpg" alt="">
-
-                        <div class="reasons-titles">
-
-                            <h3 class="reasons-title">WE care about others</h3>
-                            <h5 class="reason-subtitle">We are humans</h5>
-
-                        </div>
-
-                        <div class="on-hover hidden-xs">
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur praesentium, itaque facilis nesciunt ab omnis cumque similique ipsa veritatis perspiciatis, harum ad at nihil molestias, dignissimos sint consequuntur. Officia, fuga.</p>
-
-                        </div>
-
-
-                    </div>
-
-                </div>
-
-
-            </div>
-
-
-
-        </div>
-
-
     </div>
-	<!--<div class="main-container">
-
-		<div class="our-causes fadeIn animated">
-
-	        <div class="container">
-
-	            <h2 class="title-style-1">Our Events <span class="title-under"></span></h2>
-
-	            <div class="row">
-
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-hunger.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-		                            10$ / 500$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">HUNGER AND POVERTY </a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-education.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-		                            400$ / 700$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">EDUCATION AND TRAINING</a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-rights.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-		                            400$ / 1000$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">HUMAN RIGHTS</a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-culture.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-		                            400$ / 700$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">ARTS AND CULTURE </a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-hunger.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-		                            10$ / 500$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">HUNGER AND POVERTY </a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-education.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-		                            400$ / 700$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">EDUCATION AND TRAINING</a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-rights.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-		                            400$ / 1000$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">HUMAN RIGHTS</a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-		                <div class="col-md-3 col-sm-6">
-
-		                    <div class="cause">
-
-		                        <img src="assets/images/causes/cause-culture.jpg" alt="" class="cause-img">
-
-		                        <div class="progress cause-progress">
-		                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-		                            400$ / 700$
-		                          </div>
-		                        </div>
-
-		                        <h4 class="cause-title"><a href="#">ARTS AND CULTURE </a></h4>
-		                        <div class="cause-details">
-		                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-		                        </div>
-
-		                        <div class="btn-holder text-center">
-
-		                          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#donateModal"> DONATE NOW</a>
-
-		                        </div>
-
-
-
-		                    </div>
-
-		                </div>
-
-
-	            </div>
-
-	         </div>
-
-            </div>
-
-
-
-
-	</div>  -->
-
+    <section>
+
+        <div class="alert alert-danger  "  role="alert">
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam fugit, vitae est iure eligendi maiores illo amet id, tenetur voluptas autem rerum blanditiis cumque. Voluptatem consequatur perspiciatis soluta fugiat. Quas?
+        </div>
+        <div class="alert alert-info  " role="alert">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci neque corrupti, consectetur tempora vero porro facilis quasi vel. Omnis saepe architecto ipsum blanditiis eaque consequatur, a libero tempore cumque magnam?
+        </div>
+        <div class="alert alert-success" role="alert">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, tempore aliquid similique est corporis, odit repellat ex ut, sapiente impedit provident expedita distinctio debitis quos saepe temporibus consequuntur consequatur molestiae?
+        </div>
+        <div class="alert alert-danger " role="alert">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dignissimos reiciendis assumenda eos voluptatem odit dicta ipsa molestiae libero animi. Delectus eveniet expedita aliquid ipsum dolores, distinctio necessitatibus ad reprehenderit?
+        </div>
+        <div class="alert alert-warning" role="alert">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, velit ipsam. Tempora, vitae iure, quia excepturi officia quaerat vero nostrum impedit facilis ipsa numquam porro commodi placeat repellendus enim et.
+        </div>
+        <div class="alert alert-info " role="alert">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, odit veritatis magni repudiandae eum, molestiae nam id assumenda quia nesciunt ipsum provident numquam totam dolor esse itaque dolorum excepturi. Beatae?
+        </div>
+        <div class="alert alert-danger " role="alert">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, aspernatur, delectus quasi velit neque quidem perspiciatis veritatis quaerat explicabo voluptatem repudiandae at corrupti pariatur ad. Assumenda eligendi natus ipsa nesciunt!
+        </div>
+        <div class="alert alert-success " role="alert">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt consequuntur harum porro asperiores ipsum repellat blanditiis consequatur omnis hic cumque, inventore eos. Suscipit atque quae optio odio numquam ex animi?S
+        </div>
+      </section>
 
     <footer class="main-footer">
 
