--- a/fundraising.html
+++ b/fundraising.html
@@ -96,12 +96,13 @@
 
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li class="has-child"><a href="#">MEDIA</a>
+                    <li class="has-child"><a class="is-active" href="#">MEDIA</a>
                       <ul class="submenu">
                         <li class="submenu-item"><a href="events.html">EVENTS</a></li>
                         <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                       </ul>
-                    </li>
+					</li>
+					<li><a href="project.html">PROJECTS</a></li>
                     <li><a href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     <li><a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow ">DONATE NOW</a></li> 
