--- a/gallery.html
+++ b/gallery.html
@@ -103,7 +103,7 @@
                          <li class="submenu-item"><a href="causes-single.html">Single cause </a></li>
                          <li class="submenu-item"><a href="causes-single.html">Single cause </a></li>
                       </ul>
-
+                      <li><a href="project.html">PROJECTS</a></li>
                     </li>
                     <li><a class="is-active" href="gallery.html">GALLERY</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
