--- a/volunteer.html
+++ b/volunteer.html
@@ -88,7 +88,7 @@
 
                   <ul class="nav navbar-nav">
 
-                    <li><a class="is-active" href="index.html">HOME</a></li>
+                    <li><a  href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li class="has-child"><a href="#">MEDIA</a>
                       <ul class="submenu">
@@ -96,7 +96,8 @@
                         <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
                       </ul>
                     </li>
-                    <li><a href="volunteer.html">VOLUNTEER</a></li>
+                    <li><a href="project.html">PROJECTS</a></li>
+                    <li><a class="is-active" href="volunteer.html">VOLUNTEER</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
                     <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow " data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
@@ -124,7 +125,7 @@
 
             <div class="item active">
 
-              <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px;" src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
               <div class="container">
 
@@ -143,7 +144,7 @@
 
             <div class="item ">
 
-              <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px;" src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
               <div class="container">
 
@@ -164,7 +165,7 @@
 
             <div class="item ">
 
-              <img src="https://images.unsplash.com/photo-1558261827-d0de98a628e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px" src="https://images.unsplash.com/photo-1558261827-d0de98a628e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
               <div class="container">
 
